--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ members = [
 ]
 resolver = "2"
 
+[patch.crates-io]
+hyper = { git = "https://github.com/qdrant/hyper", branch = "max_local_error_reset_streams" }
+
 [workspace.package]
 rust-version = "1.75"
 
